# INSystem

./: .gitignore  LICENSE  README.md
config/: config.yaml
scripts/: ShowTrajectory.py
src/common/include/: Data.h  DataLoader.h  Gnss.h  IMU.h  IMUIniter.h  NavState.h  ODOM.h  Option.h
src/common/include/common/: common.h
src/common/src/: DataLoader.cc  Gnss.cc  IMUIniter.cc  ODOM.cc  Option.cc
src/data_publisher/: CMakeLists.txt  package.xml
src/data_publisher/include/: DataPublisher.h
src/data_publisher/src/: DataPublisher.cc  main.cc
src/eskf_insystem/: CMakeLists.txt  package.xml
src/example/: pre_insystem.cc
src/pre_insystem/: CMakeLists.txt  package.xml
src/pre_insystem/example/: pre_insystem_dataset.cc  pre_insystem_ros2.cc
src/pre_insystem/include/: Common.h  DataLoader.h  G2oTypes.hpp  GINS.h  Gnss.h  IMU.h  IMUIniter.h  IMUPreint.h  NavState.h  ODOM.h  Option.h  Viewer.h
src/pre_insystem/src/: G2oTypes.cc  GINS.cc  Gnss.cc  IMUIniter.cc  IMUPreint.cc  ODOM.cc  Option.cc  Viewer.cc
src/pre_interfaces/: CMakeLists.txt  package.xml
src/pre_interfaces/msg/: NavState.msg  RTK.msg  Wodom.msg
